<resources>

    <string name="app_name">LunchList</string>
    
    <string name="sit_down">Sit Down</string>
    <string name="take_out">Takeout</string>
    <string name="delivery">Delivery</string>
    
    <string name="name_label">Name: </string>
    <string name="address_label">Address: </string>
    <string name="type_label">Type: </string>
    <string name="notes_label">Notes: </string>
    <string name="location_label">Location: </string>
    <string name="phone_label">Phone: </string>
    <string name="not_set">(not set)</string>
    
    <string name="notes_hint">Notes </string>
    <string name="feed_url_hint">Feed URL </string>
    
    <string name="save_button">Save</string>
    
    <string name="menu_settings">Settings</string>
    <string name="title_activity_lunch_list">LunchList</string>
    
    <string name="empty">No restaurants!</string>

</resources>