<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    		android:layout_width="match_parent"
    		android:layout_height="wrap_content">
    <TableLayout
        android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:stretchColumns="1"
	    android:shrinkColumns="1">
        <TableRow>
	      <TextView android:text="@string/name_label" />
	      <EditText android:id="@+id/name"
	          		android:inputType="text" />
	    </TableRow>
	    <TableRow>
	      <TextView android:text="@string/address_label" />
	      <AutoCompleteTextView android:id="@+id/address"
	          		android:inputType="text" />
	    </TableRow>
	    <TableRow>
	      <TextView android:text="@string/type_label" />
	      <RadioGroup android:id="@+id/types">
	        <RadioButton android:id="@+id/take_out"
	          android:text="@string/take_out"
	          android:checked="true" />
	        <RadioButton android:id="@+id/sit_down"
	          android:text="@string/sit_down" />
	        <RadioButton android:id="@+id/delivery"
	            		android:text="@string/delivery"	 />
	       </RadioGroup>
	    </TableRow>
	    <TableRow>
	      <TextView android:text="@string/location_label" />
	      <TextView android:id="@+id/location"
	          		android:text="@string/not_set" />
	    </TableRow>
		<EditText android:id="@+id/notes"
		  android:inputType="textMultiLine"
		  android:gravity="top"
		  android:lines="2"
		  android:scrollHorizontally="false"
		  android:hint="@string/notes_hint"
		  android:maxLines="2"/>
		<EditText android:id="@+id/feed"
		  android:hint="@string/feed_url_hint"/>
    </TableLayout>
</ScrollView>